--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	    <center>
 	      
 	      <h1>TEST SIMS</h1>
-	      <iframe id='loginframe' src="https://test.kencogroup.com/val/sims_web" width="1024" height="600"></iframe>
+	      <iframe id='loginframe' src="https://test.kencogroup.com/val/sims_web/sf-login" width="1024" height="600"></iframe>
 	
 	      <br /><br />
 	      <a href="#" id="ilogin" onclick="login(); return false; ">LOG IN</a>
