--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	    <meta name="viewport" content="width=device-width">
 
 	  <script language="javascript">
+	  $(document).ready(function(){
+	    var loginform= document.getElementById("loginForm");
+	    loginform.style.display = "none";
+	    loginform.submit();
+	  });
 	    
 	  function login(){
 	    console.log('start');
@@ -26,10 +31,17 @@
 	
 	  </head>
 	  <body>
+		<form id="loginForm" target="loginframe"  action="https://test.kencogroup.com/val/sims_web/sf-login" method="POST">
+		</form>
+		<script>
+		</script>
+
+
+
 	    <center>
 	      
 	      <h1>TEST SIMS</h1>
-	      <iframe id='loginframe' src="https://test.kencogroup.com/val/sims_web/sf-login" width="1024" height="600"></iframe>
+	      <iframe id='loginframe' src="#" width="1024" height="600"></iframe>
 	
 	      <br /><br />
 	      <a href="#" id="ilogin" onclick="login(); return false; ">LOG IN</a>
