--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 	  <script language="javascript">
 	  $(document).ready(function(){
+            console.log('Ready.');
 	    var loginform= document.getElementById("loginForm");
 	    loginform.style.display = "none";
 	    loginform.submit();
