--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
 	
 	  </head>
 	  <body>
-		<form id="loginForm" target="loginframe"  action="https://test.kencogroup.com/val/sims_web/sf-login" method="POST">
-		</form>
-		<script>
-		</script>
-
-
-
+	    <form id="loginForm" target="loginframe"  action="https://test.kencogroup.com/val/sims_web/sf-login" method="POST"></form>
 	    <center>
 	      
 	      <h1>TEST SIMS</h1>
