--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
 
 </head>
-<body onload="login();">
+<body>
 <center>
     <h1>TEST SIMS</h1>
     <iframe id='loginframe' src="#" width="1024" height="600"></iframe>
