--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <center>
     <h1>TEST SIMS</h1>
-    <iframe id='loginframe' src="#" width="1024" height="600"></iframe>
+    <iframe id='loginframe' src="https://test.kencogroup.com/val/sims_web" width="1024" height="600"></iframe>
     <br /><br />
     <a href="#" id="ilogin" onclick="login(); return false; ">LOG IN</a>
 </center>
