--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 <center>
     <h1>TEST SIMS</h1>
-    <form id="loginForm" enctype='application/json' target="myFrame" action="https://test.kencogroup.com/val/sims_web/sf-login" method="POST">
+    <form enctype="application/json" id="loginForm" target="myFrame" action="https://test.kencogroup.com/val/sims_web/sf-login" method="POST">
       <input type="text" name="username" value="blah" />
       <input type="text" name="password" value="goofy" />
       <input type="text" name="repEmail" value="tamashevich@gmail.com" />
