--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input type="text" name="salesOpportunity" value="006c000000EQNWwAAP" />
       <input type="submit">
     </form>
-    <iframe  name="simsFrame" src="" width="1024" height="600"></iframe>
+    <iframe  name="simsFrame" src="https://test.kencogroup.com/val/sims_web/" width="1024" height="600"></iframe>
     <br /><br />
 </center>
 </body>
