--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <center>
     <h1>TEST SIMS</h1>
-    <form target="simsFrame" method="POST" id="loginForm" action="https://test.kencogroup.com/val/sims_web/sf-login">
+    <form enctype="application/json" target="simsFrame" method="POST" id="loginForm" action="https://test.kencogroup.com/val/sims_web/sf-login">
       <input type="text" name="username" value="blah" />
       <input type="text" name="password" value="goofy" />
       <input type="text" name="repEmail" value="tamashevich@gmail.com" />
